Vue.js 웹 프로그래밍 - vue 템플릿 구조화 완료

--- a/vue-demo/build.gradle
+++ b/vue-demo/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//	implementation group: 'org.webjars.npm', name: 'http-vue-loader', version: '1.4.2'
+	testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
 }
 
 test {
