--- a/vue-demo/src/main/resources/application.properties
+++ b/vue-demo/src/main/resources/application.properties
@@ -1,8 +1,19 @@
 #spring.thymeleaf.suffix: .html
 spring.devtools.livereload.enabled: true
 
-spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=false
+
+# database init, supports mysql too
+database=h2
+spring.datasource.schema=classpath*:db/${database}/schema.sql
+spring.datasource.data=classpath*:db/${database}/data.sql
+
+
+# JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.open-in-view=false
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.h2.console.enabled=true
